[gd_scene load_steps=6 format=3 uid="uid://dbvrkbsbmucx2"]

[ext_resource type="Script" path="res://scenes/kate_options.gd" id="1_72e15"]
[ext_resource type="Texture2D" uid="uid://dbkgcy7t86kqp" path="res://assets/characters/kate/kate placeholder.png" id="1_a570k"]
[ext_resource type="Texture2D" uid="uid://dl8u2hk4yiw3a" path="res://assets/img/vesper_face.png" id="2_51soc"]
[ext_resource type="Texture2D" uid="uid://xxphb70yyv4u" path="res://assets/img/living_room_placeholder.png" id="2_nugt7"]
[ext_resource type="PackedScene" uid="uid://728fnim4yyl8" path="res://scenes/dialogue_label.tscn" id="3_oivbp"]

[node name="KateOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_72e15")

[node name="BackgroundScene" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nugt7")

[node name="KateTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 601.0
offset_top = -12.0
offset_right = 1334.0
offset_bottom = 1234.0
texture = ExtResource("1_a570k")
expand_mode = 1

[node name="DialogBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 223.0
offset_top = -338.0
offset_right = -219.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0

[node name="CharPortrait" type="TextureRect" parent="DialogBox"]
visible = false
layout_mode = 0
offset_left = -178.0
offset_top = -79.0
offset_right = 166.0
offset_bottom = 303.0
texture = ExtResource("2_51soc")
expand_mode = 1

[node name="DialogueLabel" parent="DialogBox" instance=ExtResource("3_oivbp")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 148.0
offset_top = 21.0
offset_right = -55.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
text = "Type here"
messages = Array[String](["Kate: Hello, love, I've missed you.", "-- END OF INTRO --"])

[node name="NamePanel" type="Panel" parent="DialogBox"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 129.0
offset_top = -197.0
offset_right = -1132.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="DialogBox/NamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Vesper"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KateOptionsBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 102.0
offset_right = 585.0
offset_bottom = 665.0

[node name="Talk" type="Button" parent="KateOptionsBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Talk"

[node name="Kiss" type="Button" parent="KateOptionsBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Kiss"

[node name="MakeOutBtn" type="Button" parent="KateOptionsBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Make Out"

[node name="SexBtn" type="Button" parent="KateOptionsBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Have Sex
"

[node name="Kate and Josh" type="Button" parent="KateOptionsBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Kate and Josh
"

[node name="KateAndJoshOptions" type="VBoxContainer" parent="KateOptionsBox/Kate and Josh"]
visible = false
layout_mode = 0
offset_left = 461.0
offset_top = -185.0
offset_right = 799.0
offset_bottom = 54.0

[node name="Kiss" type="Button" parent="KateOptionsBox/Kate and Josh/KateAndJoshOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Footjob"

[node name="Handjob" type="Button" parent="KateOptionsBox/Kate and Josh/KateAndJoshOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Handjob"

[node name="FootjobBtn" type="Button" parent="KateOptionsBox/Kate and Josh/KateAndJoshOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Footjob"

[node name="Blowjob" type="Button" parent="KateOptionsBox/Kate and Josh/KateAndJoshOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Blowjob"

[node name="69" type="Button" parent="KateOptionsBox/Kate and Josh/KateAndJoshOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "69"

[node name="Sex" type="Button" parent="KateOptionsBox/Kate and Josh/KateAndJoshOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Fuck"

[node name="Anal" type="Button" parent="KateOptionsBox/Kate and Josh/KateAndJoshOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Anal Fuck"

[node name="Threeway" type="Button" parent="KateOptionsBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Threeway
"

[node name="ThreewayBox" type="VBoxContainer" parent="KateOptionsBox/Threeway"]
visible = false
layout_mode = 0
offset_left = 480.0
offset_top = -374.0
offset_right = 818.0
offset_bottom = 189.0

[node name="FootPlayTri" type="Button" parent="KateOptionsBox/Threeway/ThreewayBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Foot Play"

[node name="MasturbationTri" type="Button" parent="KateOptionsBox/Threeway/ThreewayBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Masturbate"

[node name="OralTri" type="Button" parent="KateOptionsBox/Threeway/ThreewayBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Oral Sex"

[node name="PussyTri" type="Button" parent="KateOptionsBox/Threeway/ThreewayBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Pussy Fuck"

[node name="AnalTri" type="Button" parent="KateOptionsBox/Threeway/ThreewayBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Anal Fuck"

[node name="PeeTri" type="Button" parent="KateOptionsBox/Threeway/ThreewayBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Pee"

[node name="BackBtn" type="Button" parent="KateOptionsBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Back to Hub"

[node name="GoOutside" type="Button" parent="KateOptionsBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Go Outside
"

[node name="OutsideBox" type="VBoxContainer" parent="KateOptionsBox/GoOutside"]
layout_mode = 0
offset_left = 567.0
offset_top = -395.0
offset_right = 906.0
offset_bottom = -75.0

[node name="Mall" type="Button" parent="KateOptionsBox/GoOutside/OutsideBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Mall"

[node name="CoffeeShop" type="Button" parent="KateOptionsBox/GoOutside/OutsideBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Coffee Shop"

[node name="Pool" type="Button" parent="KateOptionsBox/GoOutside/OutsideBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Pool"

[node name="Roller" type="Button" parent="KateOptionsBox/GoOutside/OutsideBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Roller Park"

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 1462.0
offset_top = 46.0
offset_right = 1753.0
offset_bottom = 92.0
theme_override_font_sizes/font_size = 30
step = 1.0
value = 30.0

[node name="Label" type="Label" parent="ProgressBar"]
layout_mode = 0
offset_left = 35.0
offset_top = 48.0
offset_right = 255.0
offset_bottom = 106.0
theme_override_font_sizes/font_size = 40
text = "Kate's trust"

[connection signal="pressed" from="KateOptionsBox/BackBtn" to="." method="_on_back_btn_pressed"]
